# pulso

./: README.md  prd.md  test-guide.md
.claude/: CLAUDE.md
.claude-flow/: daemon-state.json  daemon.pid
.claude-flow/metrics/: backup.json  codebase-map.json  consolidation.json  harness-loop.json  performance.json  security-audit.json  test-gaps.json
.claude-flow/neural/: stats.json
backend/: .env.example  .gitignore  Cargo.toml
backend/.claude-flow/: daemon-state.json
backend/.claude-flow/data/: pending-insights.jsonl
backend/handlers/: events.rs
backend/migrations/: 20260711040112_create_events_table.sql  20260711040125_create_api_keys_table.sql  20260711062730_add_tenant_name_to_api_keys.sql  20260712101731_create_alert_rules.sql  20260712101741_create_alert_events.sql  20260715000001_update_alert_rules_time_windows.sql
backend/models/: event.rs
backend/routes/: mod.rs
backend/src/: main.rs  state.rs
backend/src/db/: redis.rs
backend/src/handlers/: alerts.rs  events.rs  metrics.rs  mod.rs  tenants.rs
backend/src/middleware/: auth.rs
backend/src/models/: alert.rs  event.rs  mod.rs  tenant.rs
backend/src/routes/: alerts.rs  event.rs  mod.rs  tenant.rs
backend/src/services/: alerts.rs  metrics.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/.claude-flow/: daemon-state.json
frontend/.claude-flow/data/: pending-insights.jsonl
frontend/src/: App.tsx  index.css
frontend/src/api/: alerts.ts  client.ts  metrics.ts  tenant.ts
frontend/src/components/: MetricsChart.tsx  Nav.tsx  PulseLine.tsx
(+5 files in other folders)
